force-app/main/default/objects/ProductAttribute/fields/Decaffeinated__c.field-meta.xml
<CustomField>
    <fullName>Decaffeinated__c</fullName>
    <label>Decaffeinated</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>