force-app/main/default/objects/ProductAttribute/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ground</fullName>
            </value>
            <value>
                <fullName>Pods</fullName>
            </value>
            <value>
                <fullName>Ready to Drink</fullName>
            </value>
            <value>
                <fullName>Whole Bean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>