force-app/main/default/objects/ProductAttribute/fields/Wearing_Style__c.field-meta.xml
<CustomField>
    <fullName>Wearing_Style__c</fullName>
    <label>Wearing Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Serious</fullName>
            </value>
            <value>
                <fullName>Hilarious</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>